# hipolita

./: .gitignore  INTEROPERABILITY_REPORT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-package.yml
backend/: .gitignore
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
hipolita/: __init__.py  core.py  types.py
hipolita/data_recovery/adapters/: api_adapter.py
hipolita/data_recovery/interfaces/: adapter.py
hipolita/data_recovery/portals/: portal_dados_abertos_br.py  portal_data_gov_au.py  portal_data_gov_in.py  portal_data_gov_us.py
src/hipolita/: __init__.py  core.py
tests/: test_core.py  test_core_search.py  test_data_recovery.py  test_init_api_key.py  test_integration.py
